refactor: 게시글 조회시 댓글 조회 수정